--- a/style.css
+++ b/style.css
@@ -215,11 +215,12 @@ h6 {
   background-color: #e4e7ef;
   grid-area: main-content;
   grid-template-columns: 2fr 1fr 1fr;
-  grid-template-rows: 1fr 2fr 2fr 2fr 2fr;
+  grid-template-rows: 1fr 2fr 2fr 50px 1fr 2fr;
   grid-template-areas:
     "main-headers main-headers main-headers"
     "projects projects announcements"
     "projects projects announcements"
+    "projects projects trending-header"
     "projects projects trending"
     "projects projects trending";
 }
@@ -229,23 +230,25 @@ h6 {
   grid-area: main-headers;
   grid-template-columns: 3fr 1fr;
   align-items: end;
-  margin-left: 100px;
+  margin-left: 20px;
+  font-size: 16px;
 }
 
 .projects {
   display: grid;
   grid-area: projects;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
   gap: 50px;
-  margin-left: 100px;
+  margin-left: 20px;
+  margin-bottom: 20px;
 }
 
 .project {
   display: grid;
   background-color: white;
   grid-template-areas:
-    "text ."
+    "text text"
     ". icons";
   grid-template-columns: 2fr 1fr;
   grid-template-rows: 1fr 1fr;
@@ -254,6 +257,7 @@ h6 {
 
 .project-text {
   grid-area: text;
+  font-size: 20px;
 }
 
 .project-icons {
@@ -265,4 +269,41 @@ h6 {
 
 .project-icons img {
   max-height: 30px;
+}
+
+.announcements-header {
+  margin-left: 20px;
+}
+
+.announcements {
+  grid-area: announcements;
+  background-color: white;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding: 30px;
+}
+
+.announcement {
+}
+
+.announcement:nth-child(1),
+.announcement:nth-child(2) {
+  padding-bottom: 10px;
+  border-bottom: 1px solid gray;
+}
+
+.announcement:nth-child(2),
+.announcement:nth-child(3) {
+  padding-top: 10px;
+  
+}
+
+.trending-header {
+  margin: 20px 20px 20px 20px;
+}
+
+.trending {
+  grid-area: trending;
+  background-color: white;
+  margin: 0 20px 20px 20px;
 }
