--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ h6 {
   grid-area: navbar;
   grid-template-areas:
     "searchbar searchbar searchbar . profile-icons"
-    "greeting . . profile-links profile-links";
+    "greeting . . . profile-links";
   grid-template-columns: 3fr 1fr 1fr 1fr 2fr;
   grid-template-rows: 1fr 1fr;
   background-color: white;
@@ -162,9 +162,9 @@ h6 {
 
 .profile-icons {
   display: grid;
-  grid-template-columns: 1fr 1fr 3fr;
+  grid-template-columns: 1fr 1fr 2fr;
   align-items: center;
-
+  justify-items: end;
   grid-area: profile-icons;
   font-size: 20px;
   font-weight: bold;
@@ -172,6 +172,10 @@ h6 {
 
 .profile-icons img {
   max-height: 50px;
+}
+
+.profile-icons span {
+  justify-self: center;
 }
 
 .greeting {
@@ -199,6 +203,7 @@ h6 {
   grid-area: profile-links;
   align-items: center;
   justify-items: end;
+  gap: 50px;
   grid-template-columns: 1fr 1fr 1fr;
 }
 
@@ -247,12 +252,14 @@ h6 {
 .project {
   display: grid;
   background-color: white;
+  border-left: 15px solid orange;
   grid-template-areas:
     "text text"
     ". icons";
   grid-template-columns: 2fr 1fr;
   grid-template-rows: 1fr 1fr;
   padding: 40px;
+  border-radius: 10px;
 }
 
 .project-text {
@@ -278,12 +285,10 @@ h6 {
 .announcements {
   grid-area: announcements;
   background-color: white;
+  border-radius: 10px;
   margin-left: 20px;
   margin-right: 20px;
   padding: 30px;
-}
-
-.announcement {
 }
 
 .announcement:nth-child(1),
@@ -295,15 +300,33 @@ h6 {
 .announcement:nth-child(2),
 .announcement:nth-child(3) {
   padding-top: 10px;
-  
 }
 
 .trending-header {
   margin: 20px 20px 20px 20px;
 }
 
-.trending {
+.trending-container {
   grid-area: trending;
+
+  padding: 30px;
+  border-radius: 10px;
   background-color: white;
   margin: 0 20px 20px 20px;
+}
+
+.accounts {
+  display: grid;
+  gap: 20px;
+}
+
+.accounts img {
+  max-height: 60px;
+}
+
+.accounts li {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 60px 150px;
+  gap: 20px;
 }
